# ffmpeg-sdk

./: .gitignore  build-ffmpeg-android.sh  build-libfdkaac-android.sh  build-libmp3lame-android.sh  init-android.sh  init-config.sh
android/: compile-ffmpeg.sh  do-compile-ffmpeg.sh  do-compile-libfdkaac.sh  do-compile-libx264.sh  do-detect-env.sh
android/FFmpegInvokeDemo/: settings.gradle
android/FFmpegInvokeDemo/app/: build.gradle
android/FFmpegInvokeDemo/app/src/androidTest/java/com/github/yql/ffmpeginvokedemo/: ExampleInstrumentedTest.java
android/FFmpegInvokeDemo/app/src/main/: AndroidManifest.xml
android/FFmpegInvokeDemo/app/src/main/java/com/github/yql/ffmpeginvokedemo/: MainActivity.java  PermissionUtil.java
android/FFmpegInvokeDemo/app/src/main/res/layout/: activity_main.xml
android/FFmpegInvokeDemo/app/src/main/res/values/: strings.xml
android/FFmpegInvokeDemo/app/src/test/java/com/github/yql/ffmpeginvokedemo/: ExampleUnitTest.java
android/ffmpeginvoke/: CMakeLists.txt  build.gradle
android/ffmpeginvoke/src/androidTest/java/com/github/yql/ffmpeginvoke/: ExampleInstrumentedTest.java
android/ffmpeginvoke/src/main/: AndroidManifest.xml
android/ffmpeginvoke/src/main/cpp/: cmdutils.c  ffmpeg_android_jni.c  ffmpeg_invoke_jni.c  ffmpeg_main.c  ffmpeg_opt.c  log.h
android/ffmpeginvoke/src/main/java/com/github/yql/ffmpeginvoke/: FFmpegAndroid.java  FFmpegInvoke.java
android/ffmpeginvoke/src/main/res/values/: strings.xml
config/: module-transcode.sh  module.sh
tools/: pull-repo-ref.sh
